tests/errors/bad_not2.asm
FUNC LABEL 0
    MOV STK A VAL 9
    REF STK B STK A
    NOT PTR B
    RET
